# hess-ems

./: README.md  pyproject.toml
examples/: deadzone.ipynb  fuzzy.ipynb  lowpass.ipynb  mpc.ipynb
hessems/: deadzone.py  fuzzy.py  lowpass.py  mpc.py  util.py
